...

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      resizeToAvoidBottomInset: true,
      appBar: CommonAppBar(
        title: 'Grammafy',
        enableAction: true,
        onTapAction: () {
          // navigate to settings page
        },
      ),
      body: BlocListener<HomePageCubit, HomePageState>(
...
                        setState(() {});
                      },
                      style: BaseTextStyle.displayMedium.copyWith(
                        color: BaseColors.neutralColor,
                      ),
                      decoration: InputDecoration(
                        hintText: "Chat with Grammafy",
                        hintStyle: BaseTextStyle.displayMedium.copyWith(
                          color: BaseColors.neutralColor.withOpacity(0.6),
                        ),
                        border: InputBorder.none,
                        enabledBorder: InputBorder.none,
                        focusedBorder: InputBorder.none,
...
